--- a/TournamentMaster3000/pom.xml
+++ b/TournamentMaster3000/pom.xml
@@ -74,6 +74,10 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.32</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
